@@ -58,6 +58,7 @@ export(is.quoted)
 export(isplit2)
 export(join)
 export(join.keys)
+export(join_all)
 export(l_ply)
 export(laply)
 export(ldply)
